added method signatures for controller posts and added ids to buttons in views

--- a/DnAPresa.UI/Views/Home/Logistics.cshtml
+++ b/DnAPresa.UI/Views/Home/Logistics.cshtml
@@ -53,24 +53,9 @@
 
             <div class="row">
 
-                <div class="col-sm-4">
-
-                    <span>Print Active Driver List:</span>
-
-                </div>
-                <div class="col-sm-8">
-
-                    <input type="checkbox">
-
-                </div>
-
-            </div>
-
-            <div class="row">
-
                 <div class="col-sm-12">
 
-                    <button class="btn btn-default">Print Driver Report</button>
+                    <button class="btn btn-default">Print Carter Logistics Report</button>
 
                 </div>
 
