--- a/DnAPresa.UI/Views/Home/Driver.cshtml
+++ b/DnAPresa.UI/Views/Home/Driver.cshtml
@@ -18,7 +18,7 @@
 
                 <div class="col-sm-8">
 
-                    <input type="text" class="form-control" value="@Model.TotalActiveDrivers" disabled>
+                    <input id="TotalActiveDrivers" type="text" class="form-control" value="@Model.TotalActiveDrivers" disabled>
 
                 </div>
 
@@ -73,7 +73,7 @@
 
                 <div class="col-sm-12">
 
-                    <button class="btn btn-default">Print Driver Report</button>
+                    <button id="DriverBtn" class="btn btn-default">Print Driver Report</button>
 
                 </div>
 
@@ -84,3 +84,39 @@
     </div>
 
 </section>
+
+@section Scripts
+{
+
+    <script type="text/javascript">
+
+        $(function () {
+            $("#DriverBtn").on("click", function () {
+                Print_DriverReport();
+            });
+        });
+
+        function Print_DriverReport() {
+            var model = {
+                Username = window.location.Username,
+                Password = window.location.Password,
+                TotalActiveDrivers = $("#TotalActiveDrivers").val(),
+                DriverPoolPercentage = $("#DriverPoolPercentage").val(),
+                AlchoholPercentage = $("#AlchoholPercentage").val(),
+                PrintActiveDriverList = $("#PrintActiveDriverList").is(":checked")
+            }
+
+            $.ajax({
+                type: 'POST',
+                url: '/Home/Print_DriverReport',
+                data: JSON.stringify(model),
+                cache: false,
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (data) {
+                }
+        }
+
+    </script>    
+    
+}
