--- a/DnAPresa.UI/Views/Home/Logistics.cshtml
+++ b/DnAPresa.UI/Views/Home/Logistics.cshtml
@@ -1,61 +1,77 @@
-﻿<section>
-    <div class="row content-box">
+﻿@model TabModels
+@using DnAPresa.UI.Models
 
-        <div class="col-md-12">
+<div class="row">
 
-            <h2>Logistics</h2>
+    <div class="col-sm-1"></div>
 
-            <div class="row">
+    <div class="col-sm-3 content-box">
 
-                <div class="col-sm-4 mt7">
+        <h2>Logistics</h2>
 
-                    <span>Total Active Drivers:</span>
+        <div class="row">
 
-                </div>
+            <div class="col-sm-4 mt7">
 
-                <div class="col-sm-8">
-
-                    <input type="text" class="form-control" value="@Model.TotalActiveDrivers" disabled>
-
-                </div>
+                <span>Total Active Drivers:</span>
 
             </div>
 
-            <div class="row">
+            <div class="col-sm-8">
 
-                <div class="col-sm-4 mt7">
-
-                    <span>Driver Pool Percentage:</span>
-
-                </div>
-                <div class="col-sm-8">
-
-                    <input type="text" class="form-control">
-
-                </div>
+                <input id="TotalActiveDrivers" type="text" class="form-control" value="@Model.TotalActiveDrivers" disabled>
 
             </div>
 
-            <div class="row">
+        </div>
 
-                <div class="col-sm-4 mt7">
+        <div class="row">
 
-                    <span>Alchohol Percentage:</span>
+            <div class="col-sm-4">
 
-                </div>
-                <div class="col-sm-8">
+                <span>Driver Pool Percentage:</span>
 
-                    <input type="text" class="form-control">
+            </div>
+            <div class="col-sm-8">
 
-                </div>
+                <input id="DriverPoolPercentage" type="number" class="form-control">
 
             </div>
 
-            <div class="row">
+        </div>
 
-                <div class="col-sm-12">
+        <div class="row">
 
-                    <button class="btn btn-default">Print Carter Logistics Report</button>
+            <div class="col-sm-4">
+
+                <span>Alchohol Percentage:</span>
+
+            </div>
+            <div class="col-sm-8">
+
+                <input id="AlchoholPercentage" type="number" class="form-control">
+
+            </div>
+
+        </div>
+
+        <div class="row mt-3">
+
+            <div class="col-sm-12">
+
+                <div class="row">
+
+                    <div class="col-sm-4">
+
+                        <button id="DriverBtn" class="btn btn-default">Submit</button>
+
+                    </div>
+
+                    <div class="col-sm-8">
+
+                        <button id="print-btn" class="btn btn-default" onclick="printContent()" style="display: none;">Print</button>
+
+                    </div>
 
                 </div>
 
@@ -65,4 +81,53 @@
 
     </div>
 
-</section>
+    <div class="col-sm-1"></div>
+
+    <div class="col-sm-6">
+
+        <div id="print-preview" style="display: none;"></div>
+
+    </div>
+
+    <div class="col-sm-1"></div>
+
+</div>
+
+@section Scripts
+{
+
+    <script type="text/javascript">
+
+        $(function () {
+            $("#DriverBtn").on("click", function () {
+                Get_LogisticsReport();
+            });
+        });
+
+        function Get_LogisticsReport() {
+            var model = {
+                Username: "hey",
+                Password: "hey",
+                TotalActiveDrivers: $("#TotalActiveDrivers").val(),
+                DriverPoolPercentage: $("#DriverPoolPercentage").val(),
+                AlchoholPercentage: $("#AlchoholPercentage").val(),
+                PrintActiveDriverList: $("#PrintActiveDriverList").is(":checked")
+            }
+
+            return $.ajax({
+                type: 'POST',
+                url: '/Home/Get_LogisticsReport',
+                data: JSON.stringify(model),
+                cache: false,
+                async: false,
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                success: function (response) {
+                    $("#print-preview").html(response.PartialView).fadeIn("slow");
+                    $("#print-btn").fadeIn("slow");                }
+            });
+        }
+
+    </script>
+
+}
