--- a/DnAPresa.UI/Views/Home/Driver.cshtml
+++ b/DnAPresa.UI/Views/Home/Driver.cshtml
@@ -1,79 +1,92 @@
 ﻿@model TabModels
 @using DnAPresa.UI.Models
 
-<section>
-    <div class="row content-box">
+<div class="row">
 
-        <div class="col-md-12">
+    <div class="col-sm-1"></div>
 
-            <h2>Driver</h2>
+    <div class="col-sm-3 content-box">
 
-            <div class="row">
+        <h2>Driver</h2>
 
-                <div class="col-sm-4 mt7">
+        <div class="row">
 
-                    <span>Total Active Drivers:</span>
+            <div class="col-sm-4 mt7">
 
-                </div>
-
-                <div class="col-sm-8">
-
-                    <input id="TotalActiveDrivers" type="text" class="form-control" value="@Model.TotalActiveDrivers" disabled>
-
-                </div>
+                <span>Total Active Drivers:</span>
 
             </div>
 
-            <div class="row">
+            <div class="col-sm-8">
 
-                <div class="col-sm-4 mt7">
-
-                    <span>Driver Pool Percentage:</span>
-
-                </div>
-                <div class="col-sm-8">
-
-                    <input type="text" class="form-control">
-
-                </div>
+                <input id="TotalActiveDrivers" type="text" class="form-control" value="@Model.TotalActiveDrivers" disabled>
 
             </div>
 
-            <div class="row">
+        </div>
 
-                <div class="col-sm-4 mt7">
+        <div class="row">
 
-                    <span>Alchohol Percentage:</span>
+            <div class="col-sm-4">
 
-                </div>
-                <div class="col-sm-8">
+                <span>Driver Pool Percentage:</span>
 
-                    <input type="text" class="form-control">
+            </div>
+            <div class="col-sm-8">
 
-                </div>
+                <input id="DriverPoolPercentage" type="number" class="form-control">
 
             </div>
 
-            <div class="row">
+        </div>
 
-                <div class="col-sm-4">
+        <div class="row">
 
-                    <span>Print Active Driver List:</span>
+            <div class="col-sm-4">
 
-                </div>
-                <div class="col-sm-8">
+                <span>Alchohol Percentage:</span>
 
-                    <input type="checkbox">
+            </div>
+            <div class="col-sm-8">
 
-                </div>
+                <input id="AlchoholPercentage" type="number" class="form-control">
 
             </div>
 
-            <div class="row">
+        </div>
 
-                <div class="col-sm-12">
+        <div class="row">
 
-                    <button id="DriverBtn" class="btn btn-default">Print Driver Report</button>
+            <div class="col-sm-4">
+
+                <span>Print Active Driver List:</span>
+
+            </div>
+            <div class="col-sm-8">
+
+                <input id="PrintActiveDriverList" type="checkbox">
+
+            </div>
+
+        </div>
+
+        <div class="row mt-3">
+
+            <div class="col-sm-12">
+
+                <div class="row">
+
+                    <div class="col-sm-4">
+
+                        <button id="DriverBtn" class="btn btn-default">Submit</button>
+
+                    </div>
+
+                    <div class="col-sm-8">
+
+                        <button id="print-btn" class="btn btn-default" onclick="printContent()" style="display: none;">Print</button>
+
+                    </div>
 
                 </div>
 
@@ -83,7 +96,18 @@
 
     </div>
 
-</section>
+
+    <div class="col-sm-1"></div>
+
+    <div class="col-sm-6">
+
+        <div id="print-preview" style="display: none;"></div>
+
+    </div>
+
+    <div class="col-sm-1"></div>
+
+</div>
 
 @section Scripts
 {
@@ -92,31 +116,35 @@
 
         $(function () {
             $("#DriverBtn").on("click", function () {
-                Print_DriverReport();
+                Get_DriverReport();
             });
         });
 
-        function Print_DriverReport() {
+        function Get_DriverReport() {
             var model = {
-                Username = window.location.Username,
-                Password = window.location.Password,
-                TotalActiveDrivers = $("#TotalActiveDrivers").val(),
-                DriverPoolPercentage = $("#DriverPoolPercentage").val(),
-                AlchoholPercentage = $("#AlchoholPercentage").val(),
-                PrintActiveDriverList = $("#PrintActiveDriverList").is(":checked")
+                Username: "hey",
+                Password: "hey",
+                TotalActiveDrivers: $("#TotalActiveDrivers").val(),
+                DriverPoolPercentage: $("#DriverPoolPercentage").val(),
+                AlchoholPercentage: $("#AlchoholPercentage").val(),
+                PrintActiveDriverList: $("#PrintActiveDriverList").is(":checked")
             }
 
-            $.ajax({
+            return $.ajax({
                 type: 'POST',
-                url: '/Home/Print_DriverReport',
+                url: '/Home/Get_DriverReport',
                 data: JSON.stringify(model),
                 cache: false,
+                async: false,
                 contentType: "application/json; charset=utf-8",
                 dataType: "json",
-                success: function (data) {
+                success: function (response) {
+                    $("#print-preview").html(response.PartialView).fadeIn("slow");
+                    $("#print-btn").fadeIn("slow");
                 }
+            });
         }
 
-    </script>    
-    
+    </script>
+
 }
