--- a/DnAPresa.UI/Views/Shared/_Layout.cshtml
+++ b/DnAPresa.UI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <div class="container body-content">
+    <div class="body-content">
         @Html.Partial("_Layout_navbar")
         @RenderBody()
 
